fix the summary bar height and use scrolls when too much content

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -49,6 +49,9 @@ table.tasks
   td:first-child, th:first-child
     border-left: 1px solid $tasks-outer-border-color
 
+.alert
+  margin-bottom: 22px
+
 form.form-inline-row
   margin: 0
 
@@ -57,6 +60,10 @@ form.form-inline-row
     margin: 0
     margin-right: 10px
     width: 30px
+
+.summary-bar
+  height: 60px
+  overflow-y: auto
 
 .story-helper
   position: absolute
